Fix font size & padding on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 @media only screen  and (min-width: 300px) and (max-width: 600px) {
 
     .blog-name {
-        font-size: 15px !important;
+        font-size: 25px !important;
     }
 
     .bio-description {
@@ -58,7 +58,7 @@ h1, h2, h3, h4, h5, h6 {
         margin-left: auto;
         margin-right: auto;
         max-width: 58rem;
-        padding: 1.015rem 2rem !important;
+        padding: 2.015rem 2rem !important;
 
     }
 
